# mujoco_roboticarm

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: devcontainer.json  docker-compose.yml
src/cmake_test/: CMakeLists.txt
src/cmake_test/src/: minimal_node.cpp  minimal_publisher.cpp
src/control/: CMakeLists.txt  invkinetic.py  test.py
src/control/include/control/: ik_controller.hpp  ik_node.hpp  pinocchio_wrapper.hpp
src/control/src/: ik_controller.cpp  ik_node.cpp  invkinematic.cpp  pinocchio_wrapper.cpp
src/control_py/: Dummyforce.py  __init__.py  dynamics_controller.py  dynamics_ros2_node.py  ik_ros2_node.py  pinocchio_ik.py
src/mujoco_arm_publisher/: package.xml  setup.cfg  setup.py
src/mujoco_arm_publisher/launch/: mujoco_arm.launch.py  torque.launch.py
src/mujoco_arm_publisher/models/universal_robots_ur5e/: scene_torque.xml  ur5e_torque.xml
src/mujoco_arm_publisher/mujoco_arm_publisher/: arm_joint_publisher_node.py  mujoco_tf_publisher.py  torque_node.py
